syntax = "proto3";

option csharp_namespace = "grpcCrixalis.Protos";
package ReadKaryawanPackage;

// Definisikan Karyawan service.
service ReadKaryawan {
	rpc GetAllKaryawan (ReadAllKaryawanRequest) returns (ReadAllKaryawanReply);
	rpc GetKaryawanById (ReadKaryawanByIdRequest) returns (ReadKaryawanReply);
}

message ReadAllKaryawanRequest {
}
message ReadKaryawanByIdRequest {
  string IdKaryawan = 1;
}
message ReadAllKaryawanReply {
  repeated ReadKaryawanReply ReadKaryawanReply = 1;
}

message ReadKaryawanReply {
  string IdKaryawan = 1;
  string NamaLengkap = 2;
  string NamaPanggilan = 3;
  string AlamatTinggal = 4;
}
